test/compile_errors/err_issue60_if_block_binding_escape.w
//! expect-error: undefined variable

fn main:
    let _ = if true:
        let hidden = 1
        hidden
    else:
        2
    let _ = hidden
